# hft-embedded-linux-study

./: .gitignore  CROSS-MODULE-GUIDE.md  HFT-READING-ROADMAP.md  LEARNING-CHAIN.md  READING-LIST.md  README.md
00-Trading-and-Exchanges/: OUTLINE.md  README.md  chapter-01-引言与市场微观结构.md  chapter-02-交易故事.md  chapter-03-交易产业.md  chapter-03-订单类型与LOB.md  chapter-04-交易指令与订单类型.md  chapter-04-交易规则与监管.md  chapter-05-市场结构.md  chapter-05-经纪清算与结算.md  chapter-06-交易规则与监管.md  chapter-06-指令驱动市场.md  chapter-06-限价订单簿LOB.md  chapter-07-交易规则与监管.md  chapter-07-经纪人.md  chapter-07-经纪清算与结算.md  chapter-08-为什么人们要交易.md  chapter-08-经纪清算与结算.md  chapter-09-好市场.md  chapter-10-知情交易者与市场效率.md  chapter-11-指令预期者.md  chapter-12-虚张声势者与市场操纵.md  chapter-13-做市商.md  chapter-14-买卖价差.md  chapter-15-大宗交易者.md  chapter-16-价值交易者.md  chapter-17-套利者.md  chapter-18-买方交易者.md  chapter-19-流动性.md  chapter-20-波动性.md  chapter-21-流动性与交易成本衡量.md  chapter-22-绩效评估与预测.md  chapter-23-指数与投资组合市场.md  chapter-24-专家做市商系统.md  chapter-25-内部化优先撮合与交叉交易.md  chapter-26-市场内与市场间的竞争.md  chapter-27-场内交易与自动交易系统.md  chapter-28-泡沫崩盘与熔断机制.md  chapter-29-内幕交易.md
01-CSAPP-3rd/: OUTLINE.md  README.md  (+8 more)
02-c-programming/05-Embedded-C-Self-Cultivation/ch09-modular-programming-in-c/demo/demo03_cmake/: CMakeLists.txt
02-c-programming/05-Embedded-C-Self-Cultivation/ch09-modular-programming-in-c/demo/demo03_cmake/app/: main.c
02-c-programming/05-Embedded-C-Self-Cultivation/ch09-modular-programming-in-c/demo/demo03_cmake/driver/: uart.c
02-c-programming/05-Embedded-C-Self-Cultivation/ch09-modular-programming-in-c/demo/demo03_cmake/utils/: crc.c
(+3836 files in other folders)
